--- a/bloco_3/dia_3/styledes2.css
+++ b/bloco_3/dia_3/styledes2.css
@@ -1,30 +1,36 @@
 .super-mario{
 position: absolute;
 z-index: 2;
+width: 200px;
 }
 
 .goomba{ 
 z-index: 1;
 position: absolute;
+width: 150px;
+top: 360px;
+left: 100px;
 }
 
 .baloon{
-top: 1400px;
+width: 200px;
 position: absolute;
 z-index: 4;
+left: 400px;
+top: 150px;
 }
 
 .bowser{
 position: absolute;
 z-index: 3;
-top: 1400px;
-left: 250px;
+width: 250px;
+top: 200px;
+left: 600px;
 }
 
 .word{
 position: absolute;
 z-index: 5;
-top: 1450px;
-left: 60px;
-background-color: chartreuse;
+left: 420px;
+top: 180px;
 }
