--- a/bloco_3/dia_3/styledes4.css
+++ b/bloco_3/dia_3/styledes4.css
@@ -52,3 +52,24 @@ li em {
   Dica 2: Sugestão de cores padrão. StackOverflow (laranja), W3Schools (verde), MDN (preta), DevDocs (amarela), Trybe (verde).
 
 */
+
+ul.aliados li:hover{
+    font-weight: bold;
+}
+
+.orange:hover {
+    color: orange;
+}
+
+.green:hover {
+    color: rgb(2, 160, 2);
+}
+
+.black:hover {
+    color: black;
+}
+
+.yellow:hover {
+    color: yellow;
+}
+
